@@ -1,3 +1,7 @@
+Author: Aurelien Jarno <aurel32@debian.org>
+Description: Add missing declaration for macro directory so that autoreconf
+ does not fail.
+
 --- a/configure.ac
 +++ b/configure.ac
 @@ -1,5 +1,6 @@
